# docker-web-manager

./: Cargo.toml
public/: angular.json  package-lock.json
public/src/app/: app.component.html  app.module.ts  container.d.ts
public/src/app/container/: container.component.html  container.component.ts  container.d.ts
public/src/app/container-add/: container-add.component.html  container-add.component.ts
public/src/app/container-grid/: container-grid.component.html  container-grid.component.ts
public/src/environments/: environment.prod.ts  environment.ts
src/: container.rs  containers.http  main.rs  websocket.rs
src/container/: containers.rs  local_message.rs  types.rs
src/websocket/: connection.rs  connections.rs  local_message.rs  messages.rs  websocket.rs  ws_message.rs
