[package]
name = "docker-web-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
env_logger = "0.9.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
actix-web-actors = "4.1.0"
actix = "0.13.0"
uuid = { vesion = "0.8", features = ["v4", "serde"] }
tokio = "1.21.2"
